--- a/SmartCMS/Views/Home/Index.cshtml
+++ b/SmartCMS/Views/Home/Index.cshtml
@@ -41,8 +41,8 @@
                         <div class="tabbable">
 
                             <ul class="nav nav-tabs">
-                                <li class="active"><a href="#TabCategory" data-toggle="tab" onclick="hintType = 0;">知识分类</a></li>
-                                <li><a href="#TabHotTopic" data-toggle="tab" onclick="hintType = 1;">热门问答</a></li>
+                                <li class="active"><a href="#TabCategory" data-toggle="tab" onclick="ResetCategory(0);">知识分类</a></li>
+                                <li><a href="#TabHotTopic" data-toggle="tab" onclick="ResetCategory(1);">热门问答</a></li>
                             </ul>
                             <div class="tab-content">
                                 <div class="tab-pane active" id="TabCategory">
