--- a/SmartCMS/Views/CMS/Question.cshtml
+++ b/SmartCMS/Views/CMS/Question.cshtml
@@ -167,7 +167,7 @@
         </div>
             -->
         <p style="text-align:right;">
-            <a href="~/CMS/Questions/@Model.CategoryId" class="btn btn-success" style="color:white;">返 回</a>
+            <a href="~/CMS/QuestionCategories" class="btn btn-success" style="color:white;">返 回</a>
             <button type="submit" class="btn btn-success">提交回答</button>
         </p>
     </div>
