--- a/SmartCMS/Views/CMS/Questions.cshtml
+++ b/SmartCMS/Views/CMS/Questions.cshtml
@@ -75,7 +75,7 @@
                 </div>
 
                 <div style="text-align:center;">
-                    <a href="javascript:history.go(-1);" class="btn btn-primary">返 回</a>
+                    <a href="~/CMS/QuestionCategories" class="btn btn-primary">返 回</a>
                 </div>
             </div>
             <!-- /.panel-body -->
