--- a/SmartCMS/Views/Shared/_Layout.cshtml
+++ b/SmartCMS/Views/Shared/_Layout.cshtml
@@ -46,9 +46,10 @@
 </head>
 @{
     var logoUrl = "/Content/Images/logo.png";
+    var style = ViewBag.Title == "用户登录" ? "height:93px;" : "";
 }
 <body>
-    <header>
+    <header class="cms" style="@style">
         <div class="header-content-wrapper">
             <div class="float-left" style="margin:5px 0 5px 10px;">
                 <p class="site-title"><a href="~/"><img src="@logoUrl" style="height:70px;margin:0 10px 0 0px; vertical-align: bottom;"></a>@Html.ActionLink(Constants.APP_NAME, "Index", "Home")</p>
