--- a/SmartCMS/Views/Shared/_LayoutHome.cshtml
+++ b/SmartCMS/Views/Shared/_LayoutHome.cshtml
@@ -48,7 +48,7 @@
     var logoUrl = "/Content/Images/logo.png";
 }
 <body>
-    <header>
+    <header class="home">
         <div class="header-content-wrapper">
             <div class="float-left" style="margin:5px 0 5px 10px;">
                 <p class="site-title"><a href="~/"><img src="@logoUrl" style="height:70px;margin-right:10px; vertical-align: bottom;"></a>@Html.ActionLink(Constants.APP_NAME, "Index", "Home")</p>
