--- a/SmartCMS/Views/Account/Login.cshtml
+++ b/SmartCMS/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<div class="content-wrapper">
+<div class="content-wrapper" style="background:none;">
     <div class="main-content">
 
         <div class="panel panel-default">
