--- a/SmartCMS/Views/Home/Index.cshtml
+++ b/SmartCMS/Views/Home/Index.cshtml
@@ -41,11 +41,12 @@
                         <div class="tabbable">
 
                             <ul class="nav nav-tabs">
-                                <li class="active"><a href="#TabCategory" data-toggle="tab" onclick="ResetCategory(0);">知识分类</a></li>
-                                <li><a href="#TabHotTopic" data-toggle="tab" onclick="ResetCategory(1);">热门问答</a></li>
+                                <li class="active"><a href="#TabCategory" data-toggle="tab" >知识分类</a></li>
+                                <li><a href="#TabHotTopic" data-toggle="tab" >热门问答</a></li>
                             </ul>
                             <div class="tab-content">
                                 <div class="tab-pane active" id="TabCategory">
+                                    <a href="javascript:selectCategory('全部分类','0')"><h4 class="all-category">全部分类</h4></a>
                                     @foreach (var category in Model)
                                     {
                                         <a href="javascript:selectCategory('@category.Name','@category.Id')"><h5>@category.Name</h5></a>
@@ -62,6 +63,7 @@
                                     }
                                 </div>
                                 <div class="tab-pane" id="TabHotTopic">
+                                    <a href="javascript:selectCategory('全部分类','0')"><h4 class="all-category">全部分类</h4></a>
                                     @foreach (var category in Model)
                                     {
                                         <a href="javascript:showHotQuestions('@category.Name','@category.Id')"><h5>@category.Name</h5></a>
