--- a/SmartCMS/Views/CMS/EditArticle.cshtml
+++ b/SmartCMS/Views/CMS/EditArticle.cshtml
@@ -81,7 +81,7 @@
                             <span id="selectedFile">
                                 @if (!string.IsNullOrEmpty(Model.Attachment))
                                 {
-                                    <a href="@Model.Attachment" target="_blank" style="color:#009ea1;">查看附件<span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a>
+                                    <a href="@Model.Attachment" target="_blank" style="color: #457ee4; ">查看附件<span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a>
                                 }
                             </span>
                         </div>
