--- a/SmartCMS/Views/CMS/Categories.cshtml
+++ b/SmartCMS/Views/CMS/Categories.cshtml
@@ -60,6 +60,8 @@
 @helper DisplayCategory(SmartCMS.Models.CategoryViewModel category)
 {
     var className = category.ParentId == 0 ? "category" : "sub-category";
+    var className2 = category.ParentId == 0 ? "category-block col-md-3" : " ";
+    <div class="@className2">
     <ul class="@className">
         @if(category.ParentId==0)
         {
@@ -78,9 +80,10 @@
                 }
         }
     </ul>
+    </div>
     if(category.ParentId==0)
     { 
-        <hr style="width:500px; margin:10px 0 10px 100px;"/>
+        <!--<hr style="width:500px; margin:10px 0 10px 100px;"/>-->
     }
     
 }
